[gd_scene load_steps=4 format=3 uid="uid://byx2mvsjdc5a5"]

[ext_resource type="Script" uid="uid://d1e8ikj6axnpv" path="res://ui/crafting_popup.gd" id="1_crafting_script"]
[ext_resource type="Texture2D" uid="uid://b30l4i5affm45" path="res://assets/crafting_pop_up/craftingpopupmenu.png" id="2_4l051"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CraftingPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crafting_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -154.0
offset_right = 150.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageContainer1" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="ImageDisplay1" type="TextureRect" parent="VBoxContainer/ImageContainer1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4l051")
expand_mode = 2
stretch_mode = 5

[node name="TextInputContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer/TextInputContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Submit"

[node name="ImageContainer2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -46.0
offset_right = -38.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageDisplay2" type="TextureRect" parent="ImageContainer2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[node name="ImageContainer3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 38.0
offset_top = -46.0
offset_right = 88.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageDisplay3" type="TextureRect" parent="ImageContainer3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/TextInputContainer/SubmitButton" to="." method="_on_submit_pressed"]
